--- a/package.json
+++ b/package.json
@@ -17,10 +17,15 @@
   },
   "homepage": "https://github.com/scotteratigan/linkedlist#readme",
   "devDependencies": {
+    "@types/jest": "^25.1.4",
+    "@types/node": "^13.9.5",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jest": "^23.8.2",
-    "jest": "^25.1.0"
-  }
+    "jest": "^25.2.3",
+    "ts-jest": "^25.2.1",
+    "typescript": "^3.8.3"
+  },
+  "dependencies": {}
 }
